--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@components": ["components"],
+      "@config": ["config"],
+    },
     "target": "es5",
     "lib": [
       "dom",
