--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@components": ["components"],
-      "@config": ["config"],
+      "@components": ["src/components"],
+      "@config": ["src/config"],
     },
     "target": "es5",
     "lib": [
