--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "next": "^12.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/next": "^9.0.0",
     "@types/react": "^17.0.33",
+    "@types/styled-components": "^5.1.15",
     "typescript": "^4.4.4"
   }
 }
